Fix z-index bugs

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ h1 {
   background-color: #dfe1e5;
   border-radius: 10px;
   padding: 10px;
+  z-index: 1;
 }
 
 .btn-menu:hover {
